2-parsers/src/maths_parser.output
State 28 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: EXPR

    2 EXPR: EXPR T_PLUS TERM
    3     | EXPR T_MINUS TERM
    4     | TERM

    5 TERM: UNARY
    6     | TERM T_TIMES UNARY
    7     | TERM T_DIVIDE UNARY

    8 UNARY: FACTOR
    9      | T_MINUS FACTOR
   10      | UNARY T_EXPONENT UNARY

   11 FACTOR: T_NUMBER
   12       | FUNCTION_NAME T_LBRACKET EXPR T_RBRACKET
   13       | T_LBRACKET EXPR T_RBRACKET
   14       | T_VARIABLE

   15 FUNCTION_NAME: T_LOG
   16              | T_EXP
   17              | T_SQRT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_TIMES (258) 6
    T_DIVIDE (259) 7
    T_PLUS (260) 2
    T_MINUS (261) 3 9
    T_EXPONENT (262) 10
    T_LBRACKET (263) 12 13
    T_RBRACKET (264) 12 13
    T_LOG <string> (265) 15
    T_EXP <string> (266) 16
    T_SQRT <string> (267) 17
    T_NUMBER <number> (268) 11
    T_VARIABLE <string> (269) 14


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    ROOT (16)
        on left: 1
        on right: 0
    EXPR <expr> (17)
        on left: 2 3 4
        on right: 1 2 3 12 13
    TERM <expr> (18)
        on left: 5 6 7
        on right: 2 3 4 6 7
    UNARY <expr> (19)
        on left: 8 9 10
        on right: 5 6 7 10
    FACTOR <expr> (20)
        on left: 11 12 13 14
        on right: 8 9
    FUNCTION_NAME <string> (21)
        on left: 15 16 17
        on right: 12


State 0

    0 $accept: • ROOT $end

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    ROOT           go to state 8
    EXPR           go to state 9
    TERM           go to state 10
    UNARY          go to state 11
    FACTOR         go to state 12
    FUNCTION_NAME  go to state 13


State 1

    9 UNARY: T_MINUS • FACTOR

    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    FACTOR         go to state 14
    FUNCTION_NAME  go to state 13


State 2

   13 FACTOR: T_LBRACKET • EXPR T_RBRACKET

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    EXPR           go to state 15
    TERM           go to state 10
    UNARY          go to state 11
    FACTOR         go to state 12
    FUNCTION_NAME  go to state 13


State 3

   15 FUNCTION_NAME: T_LOG •

    $default  reduce using rule 15 (FUNCTION_NAME)


State 4

   16 FUNCTION_NAME: T_EXP •

    $default  reduce using rule 16 (FUNCTION_NAME)


State 5

   17 FUNCTION_NAME: T_SQRT •

    $default  reduce using rule 17 (FUNCTION_NAME)


State 6

   11 FACTOR: T_NUMBER •

    $default  reduce using rule 11 (FACTOR)


State 7

   14 FACTOR: T_VARIABLE •

    $default  reduce using rule 14 (FACTOR)


State 8

    0 $accept: ROOT • $end

    $end  shift, and go to state 16


State 9

    1 ROOT: EXPR •
    2 EXPR: EXPR • T_PLUS TERM
    3     | EXPR • T_MINUS TERM

    T_PLUS   shift, and go to state 17
    T_MINUS  shift, and go to state 18

    $default  reduce using rule 1 (ROOT)


State 10

    4 EXPR: TERM •
    6 TERM: TERM • T_TIMES UNARY
    7     | TERM • T_DIVIDE UNARY

    T_TIMES   shift, and go to state 19
    T_DIVIDE  shift, and go to state 20

    $default  reduce using rule 4 (EXPR)


State 11

    5 TERM: UNARY •
   10 UNARY: UNARY • T_EXPONENT UNARY

    T_EXPONENT  shift, and go to state 21

    $default  reduce using rule 5 (TERM)


State 12

    8 UNARY: FACTOR •

    $default  reduce using rule 8 (UNARY)


State 13

   12 FACTOR: FUNCTION_NAME • T_LBRACKET EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 22


State 14

    9 UNARY: T_MINUS FACTOR •

    $default  reduce using rule 9 (UNARY)


State 15

    2 EXPR: EXPR • T_PLUS TERM
    3     | EXPR • T_MINUS TERM
   13 FACTOR: T_LBRACKET EXPR • T_RBRACKET

    T_PLUS      shift, and go to state 17
    T_MINUS     shift, and go to state 18
    T_RBRACKET  shift, and go to state 23


State 16

    0 $accept: ROOT $end •

    $default  accept


State 17

    2 EXPR: EXPR T_PLUS • TERM

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    TERM           go to state 24
    UNARY          go to state 11
    FACTOR         go to state 12
    FUNCTION_NAME  go to state 13


State 18

    3 EXPR: EXPR T_MINUS • TERM

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    TERM           go to state 25
    UNARY          go to state 11
    FACTOR         go to state 12
    FUNCTION_NAME  go to state 13


State 19

    6 TERM: TERM T_TIMES • UNARY

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    UNARY          go to state 26
    FACTOR         go to state 12
    FUNCTION_NAME  go to state 13


State 20

    7 TERM: TERM T_DIVIDE • UNARY

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    UNARY          go to state 27
    FACTOR         go to state 12
    FUNCTION_NAME  go to state 13


State 21

   10 UNARY: UNARY T_EXPONENT • UNARY

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    UNARY          go to state 28
    FACTOR         go to state 12
    FUNCTION_NAME  go to state 13


State 22

   12 FACTOR: FUNCTION_NAME T_LBRACKET • EXPR T_RBRACKET

    T_MINUS     shift, and go to state 1
    T_LBRACKET  shift, and go to state 2
    T_LOG       shift, and go to state 3
    T_EXP       shift, and go to state 4
    T_SQRT      shift, and go to state 5
    T_NUMBER    shift, and go to state 6
    T_VARIABLE  shift, and go to state 7

    EXPR           go to state 29
    TERM           go to state 10
    UNARY          go to state 11
    FACTOR         go to state 12
    FUNCTION_NAME  go to state 13


State 23

   13 FACTOR: T_LBRACKET EXPR T_RBRACKET •

    $default  reduce using rule 13 (FACTOR)


State 24

    2 EXPR: EXPR T_PLUS TERM •
    6 TERM: TERM • T_TIMES UNARY
    7     | TERM • T_DIVIDE UNARY

    T_TIMES   shift, and go to state 19
    T_DIVIDE  shift, and go to state 20

    $default  reduce using rule 2 (EXPR)


State 25

    3 EXPR: EXPR T_MINUS TERM •
    6 TERM: TERM • T_TIMES UNARY
    7     | TERM • T_DIVIDE UNARY

    T_TIMES   shift, and go to state 19
    T_DIVIDE  shift, and go to state 20

    $default  reduce using rule 3 (EXPR)


State 26

    6 TERM: TERM T_TIMES UNARY •
   10 UNARY: UNARY • T_EXPONENT UNARY

    T_EXPONENT  shift, and go to state 21

    $default  reduce using rule 6 (TERM)


State 27

    7 TERM: TERM T_DIVIDE UNARY •
   10 UNARY: UNARY • T_EXPONENT UNARY

    T_EXPONENT  shift, and go to state 21

    $default  reduce using rule 7 (TERM)


State 28

   10 UNARY: UNARY • T_EXPONENT UNARY
   10      | UNARY T_EXPONENT UNARY •

    T_EXPONENT  shift, and go to state 21

    T_EXPONENT  [reduce using rule 10 (UNARY)]
    $default    reduce using rule 10 (UNARY)


State 29

    2 EXPR: EXPR • T_PLUS TERM
    3     | EXPR • T_MINUS TERM
   12 FACTOR: FUNCTION_NAME T_LBRACKET EXPR • T_RBRACKET

    T_PLUS      shift, and go to state 17
    T_MINUS     shift, and go to state 18
    T_RBRACKET  shift, and go to state 30


State 30

   12 FACTOR: FUNCTION_NAME T_LBRACKET EXPR T_RBRACKET •

    $default  reduce using rule 12 (FACTOR)
